Pushing Profile Picture

--- a/mywebpage.html
+++ b/mywebpage.html
@@ -97,7 +97,7 @@
 	<div class="row welcome text-center">
 		<hr>
 		<div class="col-md-6 justify-content-center d-flex">
-			<img class="profile-image" src="./mywebpage/profilephoto.jpg" alt="mypicture" width="250px" height="250px">
+			<img class="profile-image" src="./mywebpage/profile.jpg" alt="mypicture" width="250px" height="250px">
 		</div>
 		<div class="col-md-5">
 			<h2 class="display-6 padding">Naoya Hatakeyama</h2>
