rename and pushing taipei bg-image

--- a/mywebpage.html
+++ b/mywebpage.html
@@ -53,7 +53,7 @@
 	<div class="carousel-inner">
 		<!-- add each slide img -->
 		<div class="carousel-item active">
-			<img class="d-block w-100" src="./mywebpage/taipei101.jpg" alt="first slide" height="720px">
+			<img class="d-block w-100" src="./mywebpage/taipei.jpg" alt="first slide" height="720px">
 			<div class="carousel-caption">
 				<h1 class="display-3">Taipei</h1>
 			</div>
